Add JavaFX UI integration, background threading, and error handling