@@ -16,40 +16,6 @@ At the end of each time unit, the program prints out a snapshot of the queues,
 customers, and tellers.
 The program ends with printing out statistics of the simulation.
 
-## JavaFX Graphical User Interface (NEW!)
-
-You can now run the simulation with a modern JavaFX GUI:
-- **Dropdown** to select scheduling algorithm (Greedy, Round Robin, Least Work Left)
-- **Input fields** for all simulation parameters
-- **Start Simulation** button
-- **Real-time log** of simulation steps
-- **BarChart** showing teller utilization after simulation
-- **Background threading** for a responsive UI (no freezing during simulation)
-- **Input validation and error dialogs** for user-friendly experience
-
-### How to Run the JavaFX UI
-
-1. **Compile:**
-   ```sh
-   javac --module-path /path/to/javafx-sdk-XX/lib --add-modules javafx.controls,javafx.fxml simulator/*.java
-   ```
-2. **Run:**
-   ```sh
-   java --module-path /path/to/javafx-sdk-XX/lib --add-modules javafx.controls,javafx.fxml simulator.TellerSimulatorApp
-   ```
-   *(Replace `/path/to/javafx-sdk-XX/lib` with your actual JavaFX SDK path)*
-
-3. **Use the UI:**
-   - Enter your simulation parameters
-   - Select the algorithm
-   - Click **Start Simulation**
-   - View the log and utilization chart
-
-### Features
-- **Responsive UI:** Simulation runs in the background
-- **Error Handling:** Invalid input shows a dialog, not a crash
-- **Visualization:** See teller utilization and simulation log instantly
-
 ## Scheduling Algorithms
 
 When you run the program, you can choose which teller scheduling algorithm to use:
@@ -84,6 +50,26 @@ When you run the program, you can choose which teller scheduling algorithm to us
 - **Comparison mode:** Run all algorithms with same parameters for fair comparison
 - **Side-by-side analysis:** Comprehensive comparison table with all metrics
 - **Best performers:** Automatic identification of top-performing algorithms
+
+## How to Run
+
+1. **Compile:**
+   ```sh
+   javac simulator/*.java
+   ```
+
+2. **Run:**
+   ```sh
+   java simulator.TellerFlowOptimizer
+   ```
+
+3. **Follow the prompts:**
+   - Enter simulation parameters (time, transaction time, etc.)
+   - Choose your data source (file or random)
+   - **Select run mode:**
+     - Single algorithm run
+     - Comparison mode (runs all 3 algorithms)
+   - Choose scheduling algorithm (if single run mode)
 
 ## Output Features
 
